replaced models with scaffold trip

--- a/test/fixtures/trips.yml
+++ b/test/fixtures/trips.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  name: MyString
-  email: MyString
+  string: 
+  string: 
 
 two:
-  name: MyString
-  email: MyString
+  string: 
+  string: 
