--- a/test/fixtures/trips.yml
+++ b/test/fixtures/trips.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  string: 
-  string: 
+  name: MyString
+  email: MyString
 
 two:
-  string: 
-  string: 
+  name: MyString
+  email: MyString
